syntax = "proto3";

// import "google/protobuf/timestamp.proto";
// import "libs/proto-schema/src/proto/wallet.proto";

package io.trackterra.srv.parser;

service ParserService {
    rpc DoParse(ParseWalletRequest) returns (ParseWalletResponse) {}
    rpc SupportedProtocols(SupportedProtocolsRequest) returns (SupportedProtocolsResponse) {}
}

message ParseWalletRequest {
    string address = 1;
    uint32 highestParsedBlockHeight = 2;
}

message ParseWalletResponse {
    int32 number_of_new_parsed_txs = 1;
    int32 status = 2;
    string msg = 3;
}

message SupportedProtocolsRequest {
}

message SupportedProtocol {
    string protocolName = 1;
    string txType = 2;
}
message SupportedProtocolsResponse {
    repeated SupportedProtocol protocols = 1;
}